--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,14 @@
 @import url('./blocks/form/__submit/form__submit.css');
 @import url('./blocks/form/__set/form__set.css');
 
+@import url('./blocks/login/login.css');
+@import url('./blocks/login/__title/login__title.css');
+@import url('./blocks/login/__form/login__form.css');
+@import url('./blocks/login/__input/login__input.css');
+@import url('./blocks/login/__submit/login__submit.css');
+@import url('./blocks/login/__link/login__link.css');
+@import url('./blocks/login/__input-error/login__input-error.css');
+
 #root {
     background-color: #000;
 }
