--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@
 @import url('./blocks/login/__input/login__input.css');
 @import url('./blocks/login/__submit/login__submit.css');
 @import url('./blocks/login/__link/login__link.css');
+@import url('./blocks/login/__link-text/login__link-text.css');
 @import url('./blocks/login/__input-error/login__input-error.css');
 
 #root {
