--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -15,6 +15,6 @@
   .header__logo {
     max-width: 104px;
     max-height: 25px;
-    margin: 0 auto 32px 27px;
+    margin: 0 auto 32px 0;
   }
 }
