--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
   width: calc(100% - 2*200px);
   height: 74px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
+  display: flex;
+  justify-content: space-between;
 
 }
 
@@ -30,7 +32,7 @@
 
 @media screen and (max-width: 568px) {
   .header {
-    width: 100%;
+    width: calc(100% - 2*30px);
     height: 56px;
   }
 }
