--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
 
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__logo/header__logo.css');
+@import url('./blocks/header/__menu/header__menu.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/header/__out-btn/header__out-btn.css');
+@import url('./blocks/header/__link/header__link.css');
 
 @import url('./blocks/profile/profile.css');
 @import url('./blocks/profile/__add-button/profile__add-button.css');
