features: add burger-menu for mobile version

--- a/src/blocks/popup/__auth-text/popup__auth-text.css
+++ b/src/blocks/popup/__auth-text/popup__auth-text.css
@@ -9,3 +9,11 @@
     text-align: center;
     color: #000;
 }
+
+@media screen and (max-width: 568px) {
+    .popup__auth-text {
+        font-size: 20px;
+        line-height: 24px;
+        padding: 40px 0 25px;
+    }
+}
