--- a/src/blocks/popup/__auth/popup__auth.css
+++ b/src/blocks/popup/__auth/popup__auth.css
@@ -4,3 +4,9 @@
     margin: 24px auto 0;
     align-items: center;
 }
+
+@media screen and (max-width: 568px) {
+    .popup__auth {
+        margin: 25px auto 0;
+    }
+}
