--- a/src/blocks/header/__out-btn/header__out-btn.css
+++ b/src/blocks/header/__out-btn/header__out-btn.css
@@ -1,19 +1,25 @@
 .header__out-btn {
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: right;
-    color: #FFF;
-    padding-top: 6px;
-    transition: opacity .3s linear;
-    cursor: pointer;
-    background: none;
-    border: none;
-    align-self: start;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: right;
+  color: #A9A9A9;
+  padding-top: 6px;
+  transition: opacity 0.3s linear;
+  cursor: pointer;
+  background: none;
+  border: none;
+  align-self: flex-start;
 }
 
 .header__out-btn:hover {
-    opacity: 0.6;
+  opacity: 0.6;
+}
+
+@media screen and (max-width: 568px) {
+  .header__out-btn {
+    align-self: center;
+  }
 }
