--- a/src/blocks/login/__input/login__input.css
+++ b/src/blocks/login/__input/login__input.css
@@ -14,6 +14,11 @@
     align-items: center;
     outline: none;
     background-color: transparent;
+    /*outline: none;*/
+}
+
+.login__input:focus {
+    border-bottom: 2px solid #6296e5;
 }
 
 .login__input::placeholder {
@@ -25,5 +30,13 @@
     .login__input {
         width: 260px;
     }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[data-autocompleted] {
+    background-color: transparent !important;
 }
 
