--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 @import url('./blocks/header/__menu-mobile-container/header__menu-mobile-container.css');
 @import url('./blocks/header/__menu-mobile/header__menu-mobile.css');
 @import url('./blocks/header/__burger-menu/header__burger-menu.css');
-@import url('blocks/header/__burger-menu/_opened/header__burger-menu-btn_opened.css'); /*модификатор*/
+@import url('./blocks/header/__burger-menu/_opened/header__burger-menu-btn_opened.css'); /*модификатор*/
 @import url('./blocks/header/__email/header__email.css');
 @import url('./blocks/header/__out-btn/header__out-btn.css');
 @import url('./blocks/header/__link/header__link.css');
@@ -51,6 +51,7 @@
 @import url('./blocks/popup/popup.css');
 @import url('./blocks/popup/_opened/popup_opened.css'); /*модификатор*/
 @import url('./blocks/popup/_type/popup_type_expand-image.css');
+@import url('./blocks/popup/__box/popup__box.css');
 @import url('./blocks/popup/__container/popup__container.css');
 @import url('./blocks/popup/__title/popup__title.css');
 @import url('./blocks/popup/__close/popup__close.css');
